--- a/global.css
+++ b/global.css
@@ -15,3 +15,12 @@ body {
   align-items: center;
   gap: 1rem;
 }
+
+a {
+  text-decoration: none;
+  color: #8de4ff;
+  &:hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+}
